--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,10 @@ development:
 test:
   <<: *default
   database: bridgeapi_rb_test
+  username: ruby
+  password: ruby
+  host: localhost
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
