Added encryption to environment variables (#17)
Environment variables are encrypted before save & the encrypted value isn't ever revealed to the user

Co-authored-by: William Jackson <williampj@gmail.com>
Co-authored-by: = <awcrotwell@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ name: Build
 on:
   pull_request:
     branches:
-      - 'master'
+      - "master"
   schedule:
-    - cron: '0 21 * * *'
+    - cron: "0 21 * * *"
 
 jobs:
   rubocop-test:
@@ -38,7 +38,7 @@ jobs:
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ env.POSTGRES_DB }}
         ports:
-        - 5432:5432
+          - 5432:5432
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
@@ -63,7 +63,7 @@ jobs:
           bundler exec rails db:migrate RAILS_ENV=test
       - name: Run tests
         run: bundle exec rspec
-      # - name: Upload coverage results    
+      # - name: Upload coverage results
       #   uses: actions/upload-artifact@master
       #   if: always()
       #   with:
