--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: bridgeapi_rb_development
-  username: andrew
-  password:
+  username: ruby
+  password: ruby
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +60,8 @@ development:
 test:
   <<: *default
   database: bridgeapi_rb_test
-  username: andrew
-  password:
+  username: ruby
+  password: ruby
   host: localhost
   port: 5432
 
