--- a/config/database.yml
+++ b/config/database.yml
@@ -83,7 +83,11 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: bridgeapi_rb_production
-  username: bridgeapi_rb
-  password: <%= ENV['BRIDGEAPI_RB_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  database: <%= ENV['RDS_DATABASE'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOST'] %>
+  port: 5432
+  pool: 5
