--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,12 @@ jobs:
           --health-timeout 5s
           --health-retries 5
       sidekiq:
-        image: sidekiq
+        build: .
+        volumes:
+          - .:/myapp
+        links:
+          - redis
+        command: bundle exec sidekiq
       postgres:
         image: postgres:10.8
         env:
