--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-      sidekiq:
-        command: bundle exec sidekiq
       postgres:
         image: postgres:10.8
         env:
@@ -52,6 +50,15 @@ jobs:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+      sidekiq:
+        depends_on:
+          - "postgres"
+          - "redis"
+        build: .
+        command: bundle exec sidekiq
+        volumes:
+          - ".:/app"
+          - "/app/tmp" # don't mount tmp directory
     steps:
       - name: Install PostgreSQL 11
         run: |
