--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,13 +52,10 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       sidekiq:
         depends_on:
-          - "postgres"
-          - "redis"
+          - postgres
+          - redis
         build: .
         command: bundle exec sidekiq
-        volumes:
-          - ".:/app"
-          - "/app/tmp" # don't mount tmp directory
     steps:
       - name: Install PostgreSQL 11
         run: |
