--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: bridgeapi_rb_development
-  username: ruby
-  password: ruby
+  username: andrew
+  password: ""
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,9 +60,9 @@ development:
 test:
   <<: *default
   database: bridgeapi_rb_test
-  username: ruby
-  password: ruby
-  host: localhost
+  username: andrew
+  password: ""
+  host: ""
   port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
