--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,9 @@ default: &default
 development:
   <<: *default
   database: bridgeapi_rb_development
-  username: andrew
-  password: ""
+  username: ruby
+  password: ruby
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,9 +61,9 @@ development:
 test:
   <<: *default
   database: bridgeapi_rb_test
-  username: andrew
-  password: ""
-  host: ""
+  username: ruby
+  password: ruby
+  host: localhost
   port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
