--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,7 @@ development:
   database: bridgeapi_rb_development
   username: ruby
   password: ruby
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
